# remote-control

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README_EN.md  SECURITY.md  build-desktop.sh  deploy.sh  docker-compose.local.yml  docker-compose.prod.yml  run_agent.sh  start_agent.sh
agent/: Dockerfile  README.md  local_server.py  pyproject.toml  rc-agent.spec  requirements.txt
agent/app/: __init__.py  auth_service.py  cli.py  command_validator.py  config.py  crypto.py  knowledge_tool.py  log_adapter.py  main.py  mcp_client.py  pty_wrapper.py  skill_registry.py  websocket_client.py
agent/app/core/: __init__.py  config.py  env_compat.py  log_adapter.py  message_types.py  pty_process.py  pty_types.py  pty_wrapper.py
agent/app/knowledge/: ai_tools_guide.md  claude_code.md  scenario_tips.md  vibe_coding.md
agent/app/security/: __init__.py  auth_service.py  command_validator.py  crypto.py
agent/app/tools/: knowledge_tool.py  mcp_client.py  (+3 more)
agent/tests/: test_agent_connection_stability.py  test_agent_disconnect_reproduce.py  test_agent_message_handler.py  test_agent_message_handler_integration.py  test_cli.py  test_command_validator.py  test_command_validator_json_loading.py  test_config.py  test_defect_escape_config.py  test_disconnect_signal_propagation.py  test_env_compat.py  test_forwarding.py  test_knowledge_tool.py  test_local_server.py  test_log_adapter.py  test_mcp_client.py  test_pty.py  test_r055_auth.py  test_reconnect.py  test_s503_reconnect_exhausted.py  test_s507_handle_reconnect.py  test_skill_registry.py
(+863 files in other folders)
