[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rc-agent"
version = "1.0.0"
description = "Remote Control Agent - Terminal session relay agent"
authors = [{name = "AI Rules"}]
requires-python = ">=3.10"

dependencies = [
    "websockets>=12.0",
    "click>=8.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23", "pytest-timeout>=2.0"]

[project.scripts]
rc-agent = "app.cli:main"

[tool.setuptools.packages]
find = {where = ["."]}
